test/ll_parser_primary_command_test.test
*PARSER*:
    print selector ""
        block standard: data paragraph
        block standard: math
        block standard: text
        block standard: label
        block standard: code
        block TOP LEVEL: data
        block TOP LEVEL: LINE LEVEL
        block TOP LEVEL: TOP LEVEL
    print pass
        top
        operator [code, math]
        primary []
    trace [+ parser commands, + warnings ]
*PARSER*:
    begin block BLOCK1
    define primary variable ``X Y 1'' [code]
           with module M with location 100
    print primary variable ``''
        block BLOCK1: variable ``X Y 1'' [code]
                      with location 100 in module M
    test primary:  X Y 1
    found variable: X Y 1 ===> M 100
    test primary:  X Y 1 FOO
    found variable: X Y 1 ===> M 100
ERROR: in line ##: no definition found:
    test primary ``X Y'' [code]
                 ^^^^^^^
    define primary variable ``X Y'' [code]
           with module M with location 200
    test primary:  X Y 1 FOO
    found variable: X Y 1 ===> M 100
    test primary:  X Y
    found variable: X Y ===> M 200
ERROR: in line ##: no definition found:
    test primary ``X'' [code]
                 ^^^^^
    print primary variable ``''
        block BLOCK1: variable ``X Y 1'' [code]
                      with location 100 in module M
        block BLOCK1: variable ``X Y'' [code]
                      with location 200 in module M
    end block BLOCK1
    print primary variable ``''
        nothing found
*PARSER*:
    begin block BLOCK1
    define primary function ``(X) "+" (Y)'' [code]
    print primary function ``''
        block BLOCK1: function ``(X)"+"(Y)'' [code]
                      with location 0 in module [$ MISSING $]
    test primary:  (A) + (B)
    found function:  (A) "+" (B) ===> [$ MISSING $] 0
    test primary:  {|A|} + (B)
    found function:  {|A|} "+" (B) ===> [$ MISSING $] 0
    test primary:  {|A 1|} + (B)
    found function:  {|A 1|} "+" (B) ===> [$ MISSING $] 0
ERROR: in line ##: no definition found:
    test primary ``(A)+(B)+(C)'' [code]
                 ^^^^^^^^^^^^^^^
ERROR: in line ##: no definition found:
    test primary ``(A)+'' [code]
                 ^^^^^^^^
    end block BLOCK1
*PARSER*:
    begin block BLOCK1
    define primary function ``F (X) ({|Y|}?={|Z|})'' [code]
    print primary function ``''
        block BLOCK1: function ``F(X)(Y ?= {|Z|})'' [code]
                      with location 0 in module [$ MISSING $]
    test primary:  F (A) (B)
    found function:  F (A) (B) ===> [$ MISSING $] 0
    test primary:  F (A)
    found function:  F (A) {|Z|} ===> [$ MISSING $] 0
ERROR: in line ##: no definition found:
    test primary ``F'' [code]
                 ^^^^^
    end block BLOCK1
*PARSER*:
    begin block BLOCK1
    define primary function ``F (X) G ({|Y|}?={|Q|}) H (Z)'' [code]
    print primary function ``''
        block BLOCK1: function ``F(X)G(Y ?= {|Q|})H(Z)'' [code]
                      with location 0 in module [$ MISSING $]
    test primary:  F (A) G (B) H (C)
    found function:  F (A) G (B) H (C) ===> [$ MISSING $] 0
    test primary:  F (A) H (B) G (C)
    found function:  F (A) G (C) H (B) ===> [$ MISSING $] 0
    test primary:  F (A) H (B)
    found function:  F (A) G {|Q|} H (B) ===> [$ MISSING $] 0
ERROR: in line ##: no definition found:
    test primary ``F (A) G (B)'' [code]
                 ^^^^^^^^^^^^^^^
    end block BLOCK1
*PARSER*:
    begin block BLOCK1
    define primary function
       ``{"": .separator = ",",
              .initiator = "(",
              .terminator = ")"|{|X1|} {|X2|}|} F
         {"": .separator = ",",
              .initiator = "(",
              .terminator = ")"|
               {|Z1|} {|{|Z2|} ?= {|D2|}|}|}''
         [code]
    print primary function ``''
        block BLOCK1: function ``(X1, X2)F(Z1, Z2 ?= {|D2|})'' [code]
                      with location 0 in module [$ MISSING $]
    test primary:  ({|A1|}, {|A2|}) F ({|B1|}, {|B2|})
    found function:  {|A1|} {|A2|} F {|B1|} {|B2|} ===> [$ MISSING $] 0
    test primary:  ({|A1|}, {|A2|}) F (B)
    found function:  {|A1|} {|A2|} F (B) {|D2|} ===> [$ MISSING $] 0
ERROR: in lines ##-##: no definition found:
        ``(A) F
        ^^^^^^^
          {"": .separator = ",",
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
               .initiator = "(",
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
               .terminator = ")"|{|B1|} {|B2|}|}''
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    end block BLOCK1
